--- a/index.hbs
+++ b/index.hbs
@@ -1,15 +1,13 @@
-{{!< default}}
+{{!< default}} <div class="gh-page">
+  <div class="gh-container">
 
-<div class="gh-page">
-    <div class="gh-container">
+    <div class="gh-postfeed">
+      {{#foreach posts visibility="all"}}
 
-        <div class="gh-postfeed">
-        {{#foreach posts visibility="all"}}
+      {{> "card"}} {{!-- partials/card.hbs --}}
 
-            {{> "card"}} {{!-- partials/card.hbs --}}
-
-        {{/foreach}}
-        </div>
-
+      {{/foreach}}
     </div>
-</div>
+
+  </div>
+  </div>
