--- a/default.hbs
+++ b/default.hbs
@@ -63,7 +63,7 @@
             {{navigation}}
         </div>
         <div class="gh-foot-meta">
-            Published with <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
+          &copy; Normally Ltd.
         </div>
     </div>
 </footer>
