--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -4,14 +4,21 @@ Re-usable card for linking to posts
 <article class="gh-card {{post_class}}">
   <a class="gh-card-link" href="{{url}}">
     <div class="gh-card-content">
+      {{#primary_tag}}
+        <div class="primary-tag">
+          <a href="{{url}}">
+            {{name}}
+          </a>
+        </div>
+      {{/primary_tag}}
+      <h2 class="gh-card-title">
+        {{title}}
+      </h2>
       <span class="gh-card-meta">
         <time datetime="{{date format="YYYY-MM-DD"}}">
           {{date format="D MMM YYYY"}}
         </time>
       </span>
-      <h2 class="gh-card-title">
-        {{title}}
-      </h2>
       {{#if feature_image}}
         <img
           class="gh-card-image"
