--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -14,6 +14,9 @@ Re-usable card for linking to posts
       <h2 class="gh-card-title">
         {{title}}
       </h2>
+      <span class="gh-author-meta">
+        {{authors}}
+      </span>
       <span class="gh-card-meta">
         <time datetime="{{date format="YYYY-MM-DD"}}">
           {{date format="D MMM YYYY"}}
