--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -100,8 +100,8 @@ html,
 
 .gh-card-meta {
     display: block;
-    margin: 2rem 0 0;
-    font-size: 1.4rem;
+    margin: 0.5rem 0 0;
+    font-size: 1.6rem;
     line-height: 1.2em;
     letter-spacing: 0.1px;
     opacity: 0.8;
@@ -225,8 +225,19 @@ html,
 }
 
 .gh-author-meta {
-    margin: 2vmin 0 0 0;
-    font-size: 1.2em;
+    display: block;
+    margin: 2rem 0 0 0;
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+
+.gh-author-meta a {
+    text-decoration: none;
+    color: #464646;
+}
+
+.gh-author-meta a:hover {
+    text-decoration: underline;
 }
 
 .gh-author-links {
