--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -42,7 +42,7 @@ Re-usable card for linking to posts
         {{excerpt}}
       </p>
       <strong>
-        Read more
+        Read post →
       </strong>
     </div>
   </a>
