--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -90,6 +90,11 @@ html,
     flex-direction: column;
 }
 
+h2.gh-card-title a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .gh-card-image {
     width: 100%;
     max-height: 700px;
@@ -119,12 +124,14 @@ html,
     /* padding: 0 6vmin; */
 }
 
-.gh-card-content > strong {
+.gh-card-content > strong a {
     display: inline-block;
     padding: 1px 0;
     font-weight: 500;
     box-shadow: 0 -1px 0 0 inset currentColor;
     opacity: 0.5;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* Page
