--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -23,7 +23,7 @@ production stylesheet in assets/built/screen.css using: gulp dev
 @import "ghost/footer.css";
 @import "ghost/badge.css";
 
-/* Main - Your styles here! Edit below
+/* New styles
 /* ---------------------------------------------------------- */
 
 html,
@@ -33,6 +33,32 @@ html,
     min-height: 100vh;
     background: #fff;
 }
+
+/* Header
+/* ---------------------------------------------------------- */
+
+.gh-head-actions a {
+    display: inline-flex;
+    align-items: center;
+    margin: 0;
+    padding: 10px;
+}
+
+.gh-head-actions a svg {
+    height: 1.8rem;
+    fill: currentcolor;
+}
+
+.gh-head-actions a:first-child svg {
+    margin-left: 20px;
+}
+
+.gh-head-actions a:last-child svg {
+    height: 2rem;
+}
+
+/* Unmigrated
+/* ---------------------------------------------------------- */
 
 .gh-main {
     flex: 1 0 auto;
@@ -56,26 +82,6 @@ html,
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-}
-
-.gh-head-actions a {
-    display: inline-flex;
-    align-items: center;
-    margin: 0;
-    padding: 10px;
-}
-
-.gh-head-actions a svg {
-    height: 1.8rem;
-    fill: currentcolor;
-}
-
-.gh-head-actions a:first-child svg {
-    margin-left: 20px;
-}
-
-.gh-head-actions a:last-child svg {
-    height: 2rem;
 }
 
 /* Index
