--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -1,5 +1,6 @@
 {{!
-Re-usable card for linking to posts
+    - Re-usable card for linking to posts
+    - Styles in card.css
 }}
 <article class="card {{post_class}}">
   <div class="card-container">
