--- a/assets/css/components/card.css
+++ b/assets/css/components/card.css
@@ -56,7 +56,7 @@
 
 .card-excerpt {
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 28px;
 }
 
@@ -65,12 +65,13 @@
     margin-bottom: 2rem;
 }
 
-.authors {
+.card-meta .authors {
+    font-size: 1.8rem;
     font-weight: 400;
     margin-right: 0.5rem;
 }
 
-.authors a {
+.card-meta .authors a {
     color: black;
     text-decoration: none;
 }
@@ -78,4 +79,14 @@
 .card-meta time {
     opacity: 0.5;
     margin-left: 0.5rem;
+}
+
+@media (max-width: 500px) {
+    .card-meta .authors {
+        font-size: 1.6rem;
+    }
+
+    .card-excerpt {
+        font-size: 1.6rem;
+    }
 }
