Tweaking line heights

--- a/assets/css/components/card.css
+++ b/assets/css/components/card.css
@@ -39,7 +39,7 @@
 .card-excerpt {
     font-weight: 400;
     font-size: 1.8rem;
-    line-height: 28px;
+    line-height: 2.8rem;
 }
 
 .card-meta {
@@ -101,5 +101,13 @@
     .card-excerpt,
     .card-meta time {
         font-size: 1.6rem;
+    }
+
+    .card-title {
+        margin-bottom: 1rem;
+    }
+
+    .card-excerpt {
+        line-height: 2.4rem;
     }
 }
