--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -1,3 +1,5 @@
+/* custom styles start towards the bottom */
+
 /* Global Header
 /* ---------------------------------------------------------- */
 
@@ -19,7 +21,6 @@
     grid-template-columns: 1fr auto 1fr;
     grid-auto-flow: row dense;
 }
-
 
 /* Brand
 /* ---------------------------------------------------------- */
@@ -44,7 +45,6 @@
 .gh-head-logo img {
     max-height: 40px;
 }
-
 
 /* Primary Navigation
 /* ---------------------------------------------------------- */
@@ -75,7 +75,6 @@
     box-shadow: 0 -1px 0 0 currentcolor inset;
 }
 
-
 /* Secondary Navigation
 /* ---------------------------------------------------------- */
 
@@ -99,7 +98,6 @@
     margin: 0 0 0 1.5vmin;
     padding: 5px 0;
 }
-
 
 /* Mobile Menu Trigger
 /* ---------------------------------------------------------- */
@@ -131,11 +129,12 @@
     left: 0;
     bottom: 0;
     margin: auto;
-    content: '';
+    content: "";
     width: 100%;
     height: 1px;
     background: currentcolor;
-    transition: transform 300ms cubic-bezier(.2,.6,.3,1), width 300ms cubic-bezier(.2,.6,.3,1);
+    transition: transform 300ms cubic-bezier(0.2, 0.6, 0.3, 1),
+        width 300ms cubic-bezier(0.2, 0.6, 0.3, 1);
     will-change: transform, width;
 }
 
@@ -147,11 +146,12 @@
     left: 0;
     bottom: 0;
     margin: auto;
-    content: '';
+    content: "";
     width: 100%;
     height: 1px;
     background: currentcolor;
-    transition: transform 250ms cubic-bezier(.2,.7,.3,1), width 250ms cubic-bezier(.2,.7,.3,1);
+    transition: transform 250ms cubic-bezier(0.2, 0.7, 0.3, 1),
+        width 250ms cubic-bezier(0.2, 0.7, 0.3, 1);
     will-change: transform, width;
 }
 
@@ -172,7 +172,8 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
 .gh-head-open .gh-burger-box::before {
     width: 0;
     transform: translatex(19px);
-    transition: transform 200ms cubic-bezier(.2,.7,.3,1), width 200ms cubic-bezier(.2,.7,.3,1);
+    transition: transform 200ms cubic-bezier(0.2, 0.7, 0.3, 1),
+        width 200ms cubic-bezier(0.2, 0.7, 0.3, 1);
 }
 
 .gh-head-open .gh-burger-inner::before {
@@ -184,7 +185,6 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     width: 26px;
     transform: translatex(6px) rotate(-135deg);
 }
-
 
 /* Layout Variants
 /* ---------------------------------------------------------- */
@@ -198,7 +198,7 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     grid-template-columns: auto max-content max-content;
 }
 .gh-head-brandnav .gh-head-brand {
-     grid-column-start: 1;
+    grid-column-start: 1;
 }
 .gh-head-brandnav .gh-head-menu {
     margin-left: 40px;
@@ -214,12 +214,12 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     grid-gap: 2vmin;
 }
 .gh-head-stacked .gh-head-brand {
-     grid-column-start: 1;
-     width: 100%;
-     max-width: none;
-     display: flex;
-     justify-content: center;
-     text-align: center;
+    grid-column-start: 1;
+    width: 100%;
+    max-width: none;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 .gh-head-stacked .gh-head-menu,
 .gh-head-stacked .gh-head-actions,
@@ -229,7 +229,6 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
 .gh-head-stacked .gh-head-actions a:first-child svg {
     margin-left: 0;
 }
-
 
 /* Mobile Menu
 /* ---------------------------------------------------------- */
@@ -325,4 +324,49 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
     #gh-head .gh-head-menu {
         font-size: 6vmin;
     }
+}
+
+.n-head-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.n-head-sitelink a {
+    padding-bottom: 2px;
+    border-bottom: 0px solid #464646;
+}
+
+.n-head-sitelink a:hover {
+    border-bottom: 1px solid #464646;
+}
+
+/* Header
+/* ---------------------------------------------------------- */
+
+.gh-header {
+    padding: 0 0 8vmin 0;
+    text-align: left;
+}
+
+.gh-head-actions a {
+    display: inline-flex;
+    align-items: center;
+    margin: 0;
+    padding: 10px;
+}
+
+.gh-head-actions a svg {
+    height: 1.8rem;
+    fill: currentcolor;
+}
+
+.gh-head-actions a:first-child svg {
+    margin-left: 20px;
+}
+
+.gh-head-actions a:last-child svg {
+    height: 2rem;
 }
