--- a/assets/css/components/global.css
+++ b/assets/css/components/global.css
@@ -18,7 +18,8 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    color: color-mod(var(--color-base) l(+20%));
+    /* color: color-mod(var(--color-base) l(+20%)); */
+    color: black;
     font-family: var(--font-sans-serif);
     font-size: 1.5rem;
     line-height: 1.6em;
